syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "google/protobuf/empty.proto";
import "auth.proto";

service UserService {
  // User
  rpc CreateUser(User) returns (User) {}
  rpc GetUser(GetUserReq) returns (User) {}
  rpc GetUserList(GetUserListReq) returns (GetUserListRes) {}
  rpc UpdateUser(User) returns (User) {}
  rpc DeleteUser(DeleteUserReq) returns (google.protobuf.Empty) {}
//  rpc ResetPassword(ResetPasswordRequest) returns (User) {}
//  rpc SendMessageToEmail(SendMessageToEmailRequest) returns (google.protobuf.Empty) {}
  rpc GenerateEmailVerificationToken(GenerateEmailVerificationTokenReq) returns (GenerateEmailVerificationTokenRes) {}
  rpc EmailVerification(EmailVerificationReq) returns (EmailVerificationRes) {}
}

message EmailVerificationReq {
  string email = 1;
  string token = 2;
}

message EmailVerificationRes {
  bool status = 1;
}

message GenerateEmailVerificationTokenReq {
  string email = 1;
}

message GenerateEmailVerificationTokenRes {
  string email = 1;
  string token = 2;
  string expires_at = 3;
  string created_at = 4;
}

message GetUserReq {
  string id = 1;
  string email = 2;
}

message GetUserListReq {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
}

message GetUserListRes {
  repeated User users = 1;
  int32 count = 2;
}

message DeleteUserReq {
  string id = 1;
}