syntax="proto3";

package submission_service;
option go_package="genproto/submission_service";

import "google/protobuf/empty.proto";
import "submission.proto";

service ArticleService {
  // Article
  rpc CreateArticle(CreateArticleReq) returns (CreateArticleRes) {}
  rpc GetArticle(GetArticleReq) returns (GetArticleRes) {}
  rpc GetArticleList(GetArticleListReq) returns (GetArticleListRes) {}
  rpc UpdateArticle(UpdateArticleReq) returns (UpdateArticleRes) {}
  rpc DeleteArticle(DeleteArticleReq) returns (google.protobuf.Empty) {}

  // File
  //  rpc CreateFile(CreateFileReq) returns (PrimaryKey) {}
  //  rpc GetFile(PrimaryKey) returns (Article) {}
  //  rpc GetFileList(GetList) returns (GetArticleListRes) {}
  //  rpc UpdateFile(UpdateFileReq) returns (PrimaryKey) {}
  //  rpc DeleteFile(PrimaryKey) returns (google.protobuf.Empty) {}
}

message CreateArticleReq {
  string journal_id = 1;
  string type = 2;
  string title = 3;
  string author_id = 4;
  string description = 5;
  string status = 6;
  string group_id = 7;
  string manuscript = 8;
  string cover_letter = 9;
  string supplemental = 10;
  string step = 11;
  string editor_status = 12;
}

message CreateArticleRes {
  string id = 1;
  string journal_id = 2;
  string type = 3;
  string title = 4;
  string author_id = 5;
  string description = 6;
  string status = 7;
  string editor_id = 8;
  string editor_comment = 9;
  string step = 10;
  string editor_status = 11;
  string reviewer_status = 12;
  string group_id = 13;
  string manuscript = 14;
  string cover_letter = 15;
  string supplemental = 16;
  string editor_manuscript_comment = 17;
  string editor_cover_letter_comment = 18;
  string editor_supplemental_comment = 19;
  string created_at = 20;
  string updated_at = 21;
}

message GetArticleReq {
  string id = 1;
}

message GetArticleRes {
  string id = 1;
  string journal_id = 2;
  string type = 3;
  string title = 4;
  string author_id = 5;
  string description = 6;
  string status = 7;
  string editor_id = 8;
  string editor_comment = 9;
  string step = 10;
  string editor_status = 11;
  string reviewer_status = 12;
  string group_id = 13;
  string manuscript = 14;
  string cover_letter = 15;
  string supplemental = 16;
  string editor_manuscript_comment = 17;
  string editor_cover_letter_comment = 18;
  string editor_supplemental_comment = 19;
  string created_at = 20;
  string updated_at = 21;
}

message GetArticleListReq {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
  string journal_id = 4;
  string author_id = 5;
  string status = 6;
  string group_id = 7;
}

message GetArticleListRes {
  repeated Article articles = 1;
  int32 count = 2;
}

message UpdateArticleReq {
  string id = 1;
  string journal_id = 2;
  string type = 3;
  string title = 4;
  string author_id = 5;
  string description = 6;
  string status = 7;
  string editor_id = 8;
  string editor_comment = 9;
  string step = 10;
  string editor_status = 11;
  string reviewer_status = 12;
  string group_id = 13;
  string manuscript = 14;
  string cover_letter = 15;
  string supplemental = 16;
  string editor_manuscript_comment = 17;
  string editor_cover_letter_comment = 18;
  string editor_supplemental_comment = 19;
  string created_at = 20;
  string updated_at = 21;
}

message UpdateArticleRes {
  string id = 1;
  string journal_id = 2;
  string type = 3;
  string title = 4;
  string author_id = 5;
  string description = 6;
  string status = 7;
  string editor_id = 8;
  string editor_comment = 9;
  string step = 10;
  string editor_status = 11;
  string reviewer_status = 12;
  string group_id = 13;
  string manuscript = 14;
  string cover_letter = 15;
  string supplemental = 16;
  string editor_manuscript_comment = 17;
  string editor_cover_letter_comment = 18;
  string editor_supplemental_comment = 19;
  string created_at = 20;
  string updated_at = 21;
}

message DeleteArticleReq {
  string id = 1;
}

//message CreateFileReq {
//  string url = 1;
//  string type = 2;
//  string draft_id = 3;
//  string article_id = 4;
//}
//
//message UpdateFileReq {
//  string id = 1;
//  string url = 2;
//  string type = 3;
//  string draft_id = 4;
//  string article_id = 5;
//}